<resources>
    <string name="app_name">mobile_project</string>
    <string name="description">Description</string>
    <string name="item_list">Item List</string>
    <string name="add">Add</string>
    <string name="choose_image">Choose image</string>
    <string name="price">Price</string>
    <string name="name_of_item">Name of Item</string>
    <string name="item_name">Item name</string>
    <string name="update">Update</string>
    <string name="add_item">ADD ITEM</string>
    <string name="search_">Search</string>
</resources>
