<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <EditText
        android:id="@+id/edtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginRight="-1dp"
        android:ems="10"
        android:hint="@string/name_of_item"
        android:inputType="textPersonName"
        android:textColor="@color/textclr"
        android:textColorHint="@color/textclr"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="textPersonName"
        android:textColor="@color/textclr"
        android:textColorHint="@color/textclr"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/edtDes"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/imagepic" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="234dp"
        android:layout_marginRight="234dp"
        android:background="@drawable/custom_button"
        android:text="@string/add"
        android:textColor="#ffffff"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnList"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAdd"
        android:layout_alignStart="@+id/btnAdd"
        android:layout_alignLeft="@+id/btnAdd"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="195dp"
        android:layout_marginLeft="195dp"
        android:layout_marginTop="-48dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:background="@drawable/custom_button"
        android:text="@string/item_list"
        android:textColor="#ffffff"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edtDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtPrice"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:textColor="@color/textclr"
        android:textColorHint="@color/textclr"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:gravity="center"
        android:text="@string/add_item"
        android:textColor="#43C6AC"
        android:textSize="50dp"
        android:textStyle="bold"
        app:fontFamily="@font/copper" />

    <Button
        android:id="@+id/button"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="577dp"
        android:layout_marginEnd="145dp"
        android:layout_marginRight="145dp"
        android:layout_marginBottom="106dp"
        android:text="Button" />
</RelativeLayout>